fix: change urls

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/about/about.css" />
-  <link rel="icon" href="assets/favicon.ico">
+  <link rel="stylesheet" href="about.css" />
+  <link rel="icon" href="church.ico">
   <title>О нас</title>
 </head>
 <body>
 
   <header>
     <nav class="topnav">
-      <a class="active" href="/index.html">Главная</a>
-      <a href="/news/news.html">Новости</a>
-      <a href="/media/media.html">Медиа</a>
-      <a href="/about/about.html">О нас</a>
+      <a class="active" href="https://viicing.github.io/DukhovnayaTrapeznaya/">Главная</a>
+      <a href="https://viicing.github.io/DukhovnayaTrapeznaya-news">Новости</a>
+      <a href="https://viicing.github.io/DukhovnayaTrapeznaya-media">Медиа</a>
+      <a href="https://viicing.github.io/DukhovnayaTrapeznaya-about">О нас</a>
   
       <h1>Духовная Трапезная</h1>
   
@@ -30,14 +30,14 @@
     <div class="container">
       <div
           class="slide"
-          style="background-image: url('/assets/photo6.jpg');"
+          style="background-image: url('photo6.jpg');"
       >
         <h3>С уточками</h3>
       </div>
       <div
           class="slide"
           style="
-              background-image: url('/assets/photo5.jpg');
+              background-image: url('photo5.jpg');
             "
       >
         <h3>В парке</h3>
@@ -45,7 +45,7 @@
       <div
           class="slide"
           style="
-              background-image: url('/assets/photo2.jpg');
+              background-image: url('photo2.jpg');
             "
       >
         <h3>В парке</h3>
@@ -53,7 +53,7 @@
       <div
           class="slide"
           style="
-              background-image: url('/assets/photo3.jpg');
+              background-image: url('photo3.jpg');
             "
       >
         <h3>В парке</h3>
@@ -61,7 +61,7 @@
       <div
           class="slide"
           style="
-              background-image: url('/assets/photo4.jpg');
+              background-image: url('photo4.jpg');
             "
       >
         <h3>В зале</h3>
@@ -73,6 +73,6 @@
 
 </footer>
 
-<script src="/about/about.js"></script>
+<script src="about.js"></script>
 </body>
 </html>
